// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mega evolutions Mewtwo (case: "Mega Mewtwo X") 1`] = `
{
  "form": "Mega 超夢 X",
  "name": "超夢",
  "no": 150,
  "types": [
    "超能力",
    "格鬥",
  ],
}
`;

exports[`Mega evolutions Mewtwo (case: "Mega Mewtwo Y") 1`] = `
{
  "form": "Mega 超夢 Y",
  "name": "超夢",
  "no": 150,
  "types": [
    "超能力",
  ],
}
`;

exports[`Mega evolutions Mewtwo (case: "Mewtwo") 1`] = `
{
  "form": null,
  "name": "超夢",
  "no": 150,
  "types": [
    "超能力",
  ],
}
`;

exports[`Multiple forms Lycanroc (case: "Lycanroc Dusk Form") 1`] = `
{
  "form": "黃昏的樣子",
  "name": "鬃岩狼人",
  "no": 745,
  "types": [
    "岩石",
  ],
}
`;

exports[`Multiple forms Lycanroc (case: "Lycanroc Dusk") 1`] = `
{
  "form": "黃昏的樣子",
  "name": "鬃岩狼人",
  "no": 745,
  "types": [
    "岩石",
  ],
}
`;

exports[`Multiple forms Lycanroc (case: "Lycanroc Midday Form") 1`] = `
{
  "form": "白晝的樣子",
  "name": "鬃岩狼人",
  "no": 745,
  "types": [
    "岩石",
  ],
}
`;

exports[`Multiple forms Lycanroc (case: "Lycanroc Midday") 1`] = `
{
  "form": "白晝的樣子",
  "name": "鬃岩狼人",
  "no": 745,
  "types": [
    "岩石",
  ],
}
`;

exports[`Multiple forms Lycanroc (case: "Lycanroc Midnight Form") 1`] = `
{
  "form": "黑夜的樣子",
  "name": "鬃岩狼人",
  "no": 745,
  "types": [
    "岩石",
  ],
}
`;

exports[`Multiple forms Lycanroc (case: "Lycanroc Midnight") 1`] = `
{
  "form": "黑夜的樣子",
  "name": "鬃岩狼人",
  "no": 745,
  "types": [
    "岩石",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Alolan Form Meowth") 1`] = `
{
  "form": "阿羅拉地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "惡",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Alolan Meowth") 1`] = `
{
  "form": "阿羅拉地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "惡",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Galarian Form Meowth") 1`] = `
{
  "form": "伽勒爾地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "鋼",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Galarian Meowth") 1`] = `
{
  "form": "伽勒爾地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "鋼",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Meowt Galarian Form") 1`] = `
{
  "form": "伽勒爾地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "鋼",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Meowt Galarian") 1`] = `
{
  "form": "伽勒爾地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "鋼",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Meowth Alolan Form") 1`] = `
{
  "form": "阿羅拉地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "惡",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Meowth Alolan") 1`] = `
{
  "form": "阿羅拉地區",
  "name": "喵喵",
  "no": 52,
  "types": [
    "惡",
  ],
}
`;

exports[`Multiple region forms Meowth (case: "Meowth") 1`] = `
{
  "form": null,
  "name": "喵喵",
  "no": 52,
  "types": [
    "一般",
  ],
}
`;

exports[`Multiple region forms with different modes Darmanitan (case: "Darmanitan Galarian Standard Mode") 1`] = `
{
  "form": "伽勒爾地區",
  "name": "達摩狒狒",
  "no": 555,
  "types": [
    "冰",
  ],
}
`;

exports[`Multiple region forms with different modes Darmanitan (case: "Darmanitan Galarian Zen Mode") 1`] = `
{
  "form": "伽勒爾地區 達摩模式",
  "name": "達摩狒狒",
  "no": 555,
  "types": [
    "冰",
    "火",
  ],
}
`;

exports[`Multiple region forms with different modes Darmanitan (case: "Darmanitan Standard Mode") 1`] = `
{
  "form": null,
  "name": "達摩狒狒",
  "no": 555,
  "types": [
    "火",
  ],
}
`;

exports[`Multiple region forms with different modes Darmanitan (case: "Darmanitan Zen Mode") 1`] = `
{
  "form": "達摩模式",
  "name": "達摩狒狒",
  "no": 555,
  "types": [
    "火",
    "超能力",
  ],
}
`;

exports[`Multiple region forms with different modes Darmanitan (case: "Darmanitan") 1`] = `
{
  "form": "達摩模式",
  "name": "達摩狒狒",
  "no": 555,
  "types": [
    "火",
    "超能力",
  ],
}
`;
